--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <input class="form-control" type="file" id="file_input">
         <div id="output"></div>
     </body>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </html>
 <style>
     #output {
